--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -100,6 +100,9 @@
     @if $breakpoint == big-tab {
         @media only screen and (max-width: 75em) {@content};  //1200px
     }
+    @if $breakpoint == laptop-small {
+        @media only screen and (max-width: 86.25em) and (max-height: 43.75em) {@content};  //1380px -800
+    }
     @if $breakpoint == laptop {
         @media only screen and (max-width: 86.25em) and (max-height: 50em) {@content};  //1380px -800
     }
